<resources>
    <string name="app_name">Car Auto</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="audio_list">Audio LIST</string>
    <string name="video_list">Video LIST</string>
    <string name="total_videos">Total Videos</string>
    <string name="total_folders">All Folders</string>
    <string name="total_audio">All Audio</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="image">image</string>
    <string name="video_name">Video Name</string>
    <string name="folder_name">Folder Name</string>
    <string name="duration">00:00</string>
    <string name="loading">Loading..</string>
    <string name="semi_colon">:</string>

    <string name="lock">Lock Icon</string>
    <string name="back_btn">Back Button</string>
    <string name="menu">Menu</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <string name="all_folders">All Folder</string>
    <string name="themes">Themes</string>
    <string name="sort_order">sort order</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="feedback">Feedback</string>

</resources>