<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".view.PlayerActivity">

<!--    <com.google.android.exoplayer2.ui.PlayerView-->
<!--        android:id="@+id/playerView"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        app:controller_layout_id="@layout/custom_control_view"-->
<!--        android:keepScreenOn="true"-->
<!--        />-->



    <org.videolan.libvlc.util.VLCVideoLayout
        android:id="@+id/libPlayerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toBottomOf="@+id/topController"
        >
        <ImageView
            android:id="@+id/albumArtImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_lib_player"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="gone"
            />

    </org.videolan.libvlc.util.VLCVideoLayout>

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:progress="0"
        android:max="100"
        android:theme="@style/SeekBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/currentTimeTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="00:00:00"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/seekBar"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="15dp"
        />
    <TextView
        android:id="@+id/totalTimeTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="00:00:00"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/seekBar"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="15dp"
        />


    <ImageButton
        android:id="@+id/playPauseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:src="@drawable/pause"
        app:layout_constraintLeft_toRightOf="@+id/previousButton"
        app:layout_constraintTop_toBottomOf="@+id/seekBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="PlayButton"
        />

    <ImageButton
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:src="@drawable/skip_next"
        app:layout_constraintStart_toEndOf="@+id/playPauseButton"
        app:layout_constraintTop_toBottomOf="@+id/seekBar"
        android:contentDescription="NextButton"
        />
    <ImageButton
        android:id="@+id/previousButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:src="@drawable/previous"
        app:layout_constraintTop_toBottomOf="@+id/seekBar"
        app:layout_constraintEnd_toStartOf="@id/playPauseButton"
        android:contentDescription="PreviousButton"
        />

    <ImageButton
        android:id="@+id/fastForwardButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:contentDescription="FastForwardButton"
        android:gravity="center"
        android:src="@drawable/fast_forward"
        app:layout_constraintStart_toEndOf="@+id/nextButton"
        app:layout_constraintTop_toBottomOf="@+id/seekBar" />

    <ImageButton
        android:id="@+id/fastRewindButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:src="@drawable/fast_rewind"
        app:layout_constraintTop_toBottomOf="@+id/seekBar"
        app:layout_constraintEnd_toStartOf="@id/previousButton"
        android:contentDescription="PreviousButton"
        />

    <ImageButton
        android:id="@+id/playBackSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:src="@drawable/speed_24"
        app:layout_constraintBottom_toTopOf="@id/seekBar"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="SPEED"
        />


<!--    <org.videolan.libvlc.media.VideoView-->
<!--        android:id="@+id/playerView1"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        app:controller_layout_id="@layout/custom_control_view"-->
<!--        android:keepScreenOn="true"-->
<!--        />-->
    
    <LinearLayout
        android:id="@+id/topController"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:background="#42000000"
        >

        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/back_icon"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/back_btn"
            app:tint="@color/white"/>
        
        <TextView
            android:id="@+id/videoTitle"
            android:layout_width="8dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/video_name"
            android:gravity="center"
            android:textColor="@color/white"
            />

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/menu_icon"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/menu"
            app:tint="@color/white"
            android:layout_marginEnd="50dp"
            />
    </LinearLayout>

    <ImageButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/lock_open_icon"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/lock"
        app:tint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>